--- a/styles.css
+++ b/styles.css
@@ -1,93 +1,60 @@
-@import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
 }
-
 html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
 body {
-  font-family: "Press Start 2P", sans-serif;
-  color: #eee;
-  background-color: #222;
+  font-family: sans-serif;
+  color: #333;
+  background: linear-gradient(to top left, #28b487, #7dd56f);
+  height: 100vh;
 }
-
-.head-part-sub {
+.container {
   display: flex;
-  margin: 2rem;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 4rem;
 }
-.btn-proj {
+.child {
   font-size: 2rem;
-  padding: 2rem 3rem;
-  background-color: #eee;
-  color: #222;
-  font-family: inherit;
-  border-radius: 6px;
+  font-weight: 700;
+  flex-wrap: wrap;
+  background-color: white;
+  color: #333;
   border: none;
-}
-.btn-proj:hover {
-  background-color: #ccc;
+  border-radius: 2rem;
+  margin-top: 6rem;
   cursor: pointer;
+  padding: 1.75rem 3.5rem;
 }
-.number-range {
-  font-size: 1.4rem;
+.hidden {
+  display: none;
 }
-.head-first {
-  text-align: center;
-  margin: 5rem;
+h1 {
+  font-size: 2.5rem;
+  margin: 3rem 0;
 }
-.first-head {
-  font-size: 4rem;
+p {
+  font-size: 1.8rem;
 }
-.number-out {
-  font-size: 6rem;
-  text-align: center;
-  padding: 4rem;
+.modal {
+  background-color: white;
+  margin: 10rem auto;
+  border-radius: 1.5rem;
+  padding: 6rem;
+  margin-bottom: 0;
+  position: relative;
+  width: 50%;
 }
-.out-value {
-  background-color: #eee;
-  color: #222;
-  padding: 3rem 4rem;
-  border-radius: 6px;
-}
-.input-number {
-  border: 4px solid #eee;
-  background-color: #222;
-  color: #eee;
-  font-size: 4rem;
-  padding: 2.8rem;
-  width: 25rem;
-  font-family: inherit;
-  margin: 2rem;
-  margin-top: 0;
-  text-align: center;
-}
-.second-part {
-  height: 45vh;
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-.inline-span {
-  display: inline;
-}
-
-.grid-part1 {
-  display: flex;
-  gap: 2rem;
-  flex-direction: column;
-}
-.start-check {
-  margin-bottom: 6rem;
-}
-
-.check-button {
-  max-width: 25rem;
-  align-self: center;
+.close-modal {
+  font-size: 5rem;
+  position: absolute;
+  background: none;
+  border: none;
+  top: 1.5rem;
+  right: 2.5rem;
+  cursor: pointer;
 }
